# pyxlsb

./: .buildinfo  .editorconfig  .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  Test.xlsb  __init__.py  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reader.py  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  test.py  worksheet.py
.doctrees/: api.doctree  environment.pickle  index.doctree
biffy/: __init__.py  biff12.py  handlers.py  reader.py  stringtable.py  workbook.py  worksheet.py
docs/: api.rst  conf.py  index.rst
pyxlsb/: __init__.py  cdatareader.pyx  cell.py  cellreference.py  conv.py  datareader.py  formula.py  handlers.py  ptgs.py  reader.py  record_handler.py  record_reader.py  recordhandlers.py  recordreader.py  records.py  recordtypes.py  row.py  stringtable.py  styles.py  token_handler.py  tokenhandlers.py  tokenreader.py  util.py  workbook.py  worksheet.py  writer.py  xlsbpackage.py
pyxlsb/formula/: __init__.py  formula.py  ptgs.py  tokenhandlers.py  tokenreader.py  tokens.py
pyxlsb/style/: __init__.py  styles.py
test/: cellreference_test.py  datareader_test.py  dates_test.py  formula_formula_test.py  formula_ptgs_test.py  formula_test.py  ptgs_test.py  recordreader_test.py  stringtable_test.py  styles_test.py  workbook_test.py  worksheet_test.py
test_files/: Test1904.xlsb  dates.xlsb  test.xlsb  test_1904.xlsb  test_chart_sheet.xlsb
test_files/parts/: sheet1.bin.rels
